--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,82 @@
-sunpy[all]
-drms
-matplotlib
+aioftp==0.27.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+asdf==5.1.0
+asdf-astropy==0.10.0
+asdf_coordinates_schemas==0.5.1
+asdf_standard==1.5.0
+asdf_transform_schemas==0.6.0
+astropy==7.2.0
+astropy-iers-data==0.2026.2.16.0.48.25
+astropy_healpix==1.1.3
+attrs==25.4.0
+beautifulsoup4==4.14.3
+cdflib==1.3.8
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+cloudpickle==3.1.2
+contourpy==1.3.3
+cycler==0.12.1
+dask==2026.1.2
+dask-image==2025.11.0
+donfig==0.8.1.post1
+drms==0.9.0
+fonttools==4.61.1
+frozenlist==1.8.0
+fsspec==2026.2.0
+Glymur==0.14.7
+google-crc32c==1.8.0
+h5netcdf==1.8.1
+h5py==3.15.1
+idna==3.11
+ImageIO==2.37.2
+isodate==0.7.2
+jmespath==1.1.0
+kiwisolver==1.4.9
+lazy_loader==0.4
+locket==1.0.0
+lxml==6.0.2
+matplotlib==3.10.8
+mpl_animators==1.2.4
+multidict==6.7.1
+networkx==3.6.1
+numcodecs==0.16.5
+numpy==2.4.2
+opencv-python==4.13.0.92
+packaging==26.0
+pandas==3.0.0
+parfive==2.3.1
+partd==1.4.2
+pillow==12.1.1
+PIMS==0.7
+platformdirs==4.9.2
+propcache==0.4.1
+pyarrow==23.0.1
+PyAVM==0.9.8
+pyerfa==2.0.1.5
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.3
+reproject==0.19.0
+requests==2.32.5
+requests-file==3.0.1
+requests-toolbelt==1.0.0
+scikit-image==0.26.0
+scipy==1.17.0
+semantic-version==2.10.0
+six==1.17.0
+slicerator==1.1.0
+soupsieve==2.8.3
+spiceypy==8.0.1
+sunpy==7.1.0
+tifffile==2026.2.15
+toolz==1.1.0
+tqdm==4.67.3
+typing_extensions==4.15.0
+urllib3==2.6.3
+yarl==1.22.0
+zarr==3.1.5
+zeep==4.3.2
